pl19TP2a82088-a82300-a82617/src/y.output
Terminals unused in grammar

   ERRO
   BEGI


Grammar

    0 $accept: DicFinance $end

    1 DicFinance: Capitulos

    2 Capitulos: Capitulos Capitulo
    3          | %empty

    4 $@1: %empty

    5 Capitulo: Letra $@1 Traducoes

    6 Letra: CHAR

    7 $@2: %empty

    8 Traducoes: Original $@2 Traducao Traducoes
    9          | %empty

   10 Traducao: TraducaoSimples
   11         | ':' TraducaoComplexa

   12 TraducaoSimples: Significado

   13 TraducaoComplexa: Significado TraducoesIncompletas
   14                 | TraducoesIncompletas

   15 TraducoesIncompletas: TraducoesIncompletas TraducaoIncompleta
   16                     | TraducaoIncompleta

   17 TraducaoIncompleta: OriginalIncompleto Significado

   18 OriginalIncompleto: PALAVRASINC

   19 Original: PALAVRAS

   20 Significado: PALAVRAS


Terminals, with rules where they appear

$end (0) 0
':' (58) 11
error (256)
ERRO (258)
PALAVRAS (259) 19 20
PALAVRASINC (260) 18
CHAR (261) 6
BEGI (262)


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
DicFinance (10)
    on left: 1, on right: 0
Capitulos (11)
    on left: 2 3, on right: 1 2
Capitulo (12)
    on left: 5, on right: 2
$@1 (13)
    on left: 4, on right: 5
Letra (14)
    on left: 6, on right: 5
Traducoes (15)
    on left: 8 9, on right: 5 8
$@2 (16)
    on left: 7, on right: 8
Traducao (17)
    on left: 10 11, on right: 8
TraducaoSimples (18)
    on left: 12, on right: 10
TraducaoComplexa (19)
    on left: 13 14, on right: 11
TraducoesIncompletas (20)
    on left: 15 16, on right: 13 14 15
TraducaoIncompleta (21)
    on left: 17, on right: 15 16
OriginalIncompleto (22)
    on left: 18, on right: 17
Original (23)
    on left: 19, on right: 8
Significado (24)
    on left: 20, on right: 12 13 17


State 0

    0 $accept: . DicFinance $end

    $default  reduce using rule 3 (Capitulos)

    DicFinance  go to state 1
    Capitulos   go to state 2


State 1

    0 $accept: DicFinance . $end

    $end  shift, and go to state 3


State 2

    1 DicFinance: Capitulos .
    2 Capitulos: Capitulos . Capitulo

    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (DicFinance)

    Capitulo  go to state 5
    Letra     go to state 6


State 3

    0 $accept: DicFinance $end .

    $default  accept


State 4

    6 Letra: CHAR .

    $default  reduce using rule 6 (Letra)


State 5

    2 Capitulos: Capitulos Capitulo .

    $default  reduce using rule 2 (Capitulos)


State 6

    5 Capitulo: Letra . $@1 Traducoes

    $default  reduce using rule 4 ($@1)

    $@1  go to state 7


State 7

    5 Capitulo: Letra $@1 . Traducoes

    PALAVRAS  shift, and go to state 8

    $default  reduce using rule 9 (Traducoes)

    Traducoes  go to state 9
    Original   go to state 10


State 8

   19 Original: PALAVRAS .

    $default  reduce using rule 19 (Original)


State 9

    5 Capitulo: Letra $@1 Traducoes .

    $default  reduce using rule 5 (Capitulo)


State 10

    8 Traducoes: Original . $@2 Traducao Traducoes

    $default  reduce using rule 7 ($@2)

    $@2  go to state 11


State 11

    8 Traducoes: Original $@2 . Traducao Traducoes

    PALAVRAS  shift, and go to state 12
    ':'       shift, and go to state 13

    Traducao         go to state 14
    TraducaoSimples  go to state 15
    Significado      go to state 16


State 12

   20 Significado: PALAVRAS .

    $default  reduce using rule 20 (Significado)


State 13

   11 Traducao: ':' . TraducaoComplexa

    PALAVRAS     shift, and go to state 12
    PALAVRASINC  shift, and go to state 17

    TraducaoComplexa      go to state 18
    TraducoesIncompletas  go to state 19
    TraducaoIncompleta    go to state 20
    OriginalIncompleto    go to state 21
    Significado           go to state 22


State 14

    8 Traducoes: Original $@2 Traducao . Traducoes

    PALAVRAS  shift, and go to state 8

    $default  reduce using rule 9 (Traducoes)

    Traducoes  go to state 23
    Original   go to state 10


State 15

   10 Traducao: TraducaoSimples .

    $default  reduce using rule 10 (Traducao)


State 16

   12 TraducaoSimples: Significado .

    $default  reduce using rule 12 (TraducaoSimples)


State 17

   18 OriginalIncompleto: PALAVRASINC .

    $default  reduce using rule 18 (OriginalIncompleto)


State 18

   11 Traducao: ':' TraducaoComplexa .

    $default  reduce using rule 11 (Traducao)


State 19

   14 TraducaoComplexa: TraducoesIncompletas .
   15 TraducoesIncompletas: TraducoesIncompletas . TraducaoIncompleta

    PALAVRASINC  shift, and go to state 17

    $default  reduce using rule 14 (TraducaoComplexa)

    TraducaoIncompleta  go to state 24
    OriginalIncompleto  go to state 21


State 20

   16 TraducoesIncompletas: TraducaoIncompleta .

    $default  reduce using rule 16 (TraducoesIncompletas)


State 21

   17 TraducaoIncompleta: OriginalIncompleto . Significado

    PALAVRAS  shift, and go to state 12

    Significado  go to state 25


State 22

   13 TraducaoComplexa: Significado . TraducoesIncompletas

    PALAVRASINC  shift, and go to state 17

    TraducoesIncompletas  go to state 26
    TraducaoIncompleta    go to state 20
    OriginalIncompleto    go to state 21


State 23

    8 Traducoes: Original $@2 Traducao Traducoes .

    $default  reduce using rule 8 (Traducoes)


State 24

   15 TraducoesIncompletas: TraducoesIncompletas TraducaoIncompleta .

    $default  reduce using rule 15 (TraducoesIncompletas)


State 25

   17 TraducaoIncompleta: OriginalIncompleto Significado .

    $default  reduce using rule 17 (TraducaoIncompleta)


State 26

   13 TraducaoComplexa: Significado TraducoesIncompletas .
   15 TraducoesIncompletas: TraducoesIncompletas . TraducaoIncompleta

    PALAVRASINC  shift, and go to state 17

    $default  reduce using rule 13 (TraducaoComplexa)

    TraducaoIncompleta  go to state 24
    OriginalIncompleto  go to state 21
